Clear existing words on update, avoid innerHTML, select text on click
Former-commit-id: 63652f448fa1ac5a45bc73585228641eb2a5982b

--- a/x-mnemonic-phrase/x-mnemonic-phrase.css
+++ b/x-mnemonic-phrase/x-mnemonic-phrase.css
@@ -13,6 +13,8 @@ x-mnemonic-phrase,
     flex-wrap: wrap;
     font-size: 15px;
     line-height: 32px;
+    -webkit-user-select: text;
+    user-select: all; /* doesn't work on safari */
 }
 
 textarea.mnemonic-phrase {
