Add user-select none to mnemonic-phrase
Former-commit-id: 55ce5c57c6c3b7542e129470da517c29ad5fb907

--- a/x-mnemonic-phrase/x-mnemonic-phrase.css
+++ b/x-mnemonic-phrase/x-mnemonic-phrase.css
@@ -13,8 +13,9 @@ x-mnemonic-phrase,
     flex-wrap: wrap;
     font-size: 15px;
     line-height: 32px;
-    -webkit-user-select: text;
-    user-select: all; /* doesn't work on safari */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none; /* doesn't work on safari */
 }
 
 textarea.mnemonic-phrase {
