--- a/x-slider/x-slider.css
+++ b/x-slider/x-slider.css
@@ -25,9 +25,12 @@ x-slide {
     max-width: 350px;
     opacity: 0;
     margin-right: 8px;
-    transition: opacity 0.8s ease-in-out;
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    transform: scale(0.8);
+    will-change: opacity, transform;
 }
 
 x-slide.active {
     opacity: 1;
+    transform: scale(1);
 }
