Basic functionality of mnemonic-validator
Former-commit-id: 5ba7fd022f7a450f50a6bb0b0f9c49a911c60ed5

--- a/inputs/inputs.css
+++ b/inputs/inputs.css
@@ -35,7 +35,14 @@ button[disabled],
     pointer-events: none;
 }
 
-
+button.small,
+[button].small {
+    font-size: 13px;
+    width: auto;
+    padding: 0 15px;
+    height: 40px;
+    line-height: 40px;
+}
 
 /* Text Inputs */
 
