Inline html for numpad
Former-commit-id: 60d2ac7d6d450372da76218f3829cb672fd8e1b2

--- a/x-pinpad/x-pinpad.css
+++ b/x-pinpad/x-pinpad.css
@@ -40,6 +40,7 @@ x-pin-label {
     width: 100%;
     font-size: 18px;
     margin-bottom: 12px;
+    text-align:  center;
 }
 
 x-pin-label:empty:before {
