--- a/x-qr-encoder/x-qr-encoder.css
+++ b/x-qr-encoder/x-qr-encoder.css
@@ -1,6 +1,6 @@
-x-nimiqode {
+x-qr-encoder {
     border-radius: 8px;
-     background: white; 
+    background: white; 
     display: block;
     padding: 16px;
 }
