Do not reset progress when clicking wrong word
Former-commit-id: 73ccab16e2f691c4648fc680b3ae44fc7d8bcd13

--- a/x-mnemonic-validate/x-mnemonic-validate.css
+++ b/x-mnemonic-validate/x-mnemonic-validate.css
@@ -42,6 +42,8 @@ x-mnemonic-validate button.correct {
 x-mnemonic-validate button.shake {
     animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
     transform: translate3d(0, 0, 0);
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.5) 0 2px 4px;
 }
 
 @keyframes shake {
