--- a/theme/theme.css
+++ b/theme/theme.css
@@ -1,5 +1,6 @@
 :root {
     --primary-color: #536DFE;
     --primary-background: linear-gradient(#536DFE, #a553fe);
-    --success-color: #64FFDA;	/* teal-200 */		
+    --success-color: #64FFDA;	/* teal-a200 */		
+    --error-color: #FF5252; 	/* red-a200 */
 }
