--- a/theme/theme.css
+++ b/theme/theme.css
@@ -1,6 +1,8 @@
 :root {
     --primary-color: #536DFE;
     --primary-background: linear-gradient(#536DFE, #a553fe);
-    --success-color: #64FFDA;	/* teal-a200 */		
-    --error-color: #FF5252; 	/* red-a200 */
+    --success-color: #64FFDA; /* teal-a200 */
+    --error-color: #FF5252; /* red-a200 */
+    --secondary-text-color: rgba(0, 0, 0, 0.7);
+    --secondary-cta-color: rgba(255, 255, 255, 0.7);
 }
