Fix and use error- and secondary-text colors
Former-commit-id: fb93dca1bb6922950a1683f649ae0baf47270b6a

--- a/x-mnemonic-validate/x-mnemonic-validate.css
+++ b/x-mnemonic-validate/x-mnemonic-validate.css
@@ -35,7 +35,7 @@ x-mnemonic-validate x-target-index::before {
 x-mnemonic-validate button.correct {
     background-color: var(--success-color);
     border-color: var(--success-color);
-    color: rgba(0,0,0,0.7);
+    color: var(--secondary-text-color);
 }
 
 x-mnemonic-validate button.shake {
@@ -43,7 +43,7 @@ x-mnemonic-validate button.shake {
     transform: translate3d(0, 0, 0);
     background-color: var(--error-color);
     border-color: var(--error-color);
-    color: rgba(0,0,0,0.7);
+    color: var(--secondary-text-color);
     box-shadow: rgba(0, 0, 0, 0.5) 0 2px 4px;
 }
 
