Use forth slide for success sign in XMnemonicValidate
Former-commit-id: 20bf31040bce24d21ae281f8a91a2c98629ba2f2

--- a/x-slider/x-slider.css
+++ b/x-slider/x-slider.css
@@ -17,7 +17,7 @@ x-slide-container.animate {
 x-slide {
     border: 1px solid white;
     border-radius: 8px;
-    padding: 8px;
+    padding: 24px 16px;
     box-sizing: border-box;
     min-height: 10em;
     flex: 1;
