--- a/x-mnemonic-validate/x-mnemonic-validate.css
+++ b/x-mnemonic-validate/x-mnemonic-validate.css
@@ -1,7 +1,6 @@
 x-mnemonic-validate {
     width: 100%;
     color: white;
-    /* background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJElEQVQYV2NkwAT/GdHE/jMwMDAiC4IFQIpggnABmCCKAEgQAABOBQUaykC8AAAAAElFTkSuQmCC'); */
     text-align: center;
     display: flex;
     flex-wrap: wrap;
@@ -44,7 +43,6 @@ x-mnemonic-validate button.shake {
     background-color: var(--error-color);
     border-color: var(--error-color);
     color: var(--secondary-text-color);
-    box-shadow: rgba(0, 0, 0, 0.5) 0 2px 4px;
 }
 
 @keyframes shake {
@@ -52,4 +50,10 @@ x-mnemonic-validate button.shake {
     20%, 80% { transform: translate3d(2px, 0, 0); }
     30%, 50%, 70% { transform: translate3d(-4px, 0, 0); }
     40%, 60% { transform: translate3d(4px, 0, 0); }
+}
+
+x-mnemonic-validate x-slide:last-child {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
