Fixed x-wordlist height, hide success-slide x-dot
Former-commit-id: ce881d7e846acb070d33c2ad75ac118261b17217

--- a/x-mnemonic-validate/x-mnemonic-validate.css
+++ b/x-mnemonic-validate/x-mnemonic-validate.css
@@ -57,3 +57,13 @@ x-mnemonic-validate x-slide:last-child {
     flex-direction: column;
     justify-content: center;
 }
+
+
+x-wordlist{
+    display: block;
+    height: 180px;
+}
+
+x-mnemonic-validate x-indicator x-dot:last-child {
+    display: none;
+}
