x-wallet-backup-import version 1
Former-commit-id: b12ad65148d5d49d93f72a2bd8fbc0f5a4841fd2

--- a/x-wallet-backup-import/x-wallet-backup-import.css
+++ b/x-wallet-backup-import/x-wallet-backup-import.css
@@ -1,21 +1,45 @@
-x-wallet-backup-backdrop{
-	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background: rgba(0,0,0,0.7);
-	justify-content: center;
-	align-items: center;
-	color: white;
-	font-size: 24px;
+x-wallet-backup-import {
+    display: flex;
+    width: 320px;
+    height: 400px;
+    border: 1px solid white;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 12px;
+    background: url('data:image/svg+xml,<svg fill="#fff" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"/></svg>');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 120px;
+    color: white;
+    cursor: pointer;
 }
 
-x-wallet-backup-backdrop:before{
-	content: 'Drop wallet file to import';
+x-wallet-backup-import h1:before {
+    content: 'Drop a File';
 }
 
-x-wallet-backup-backdrop[active]{
-	display: flex;
+x-wallet-backup-import input {
+    display: none;
+}
+
+x-wallet-backup-backdrop {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+}
+
+x-wallet-backup-backdrop:before {
+    content: 'Drop wallet file to import';
+}
+
+[active] x-wallet-backup-backdrop {
+    display: flex;
 }
