Move forgotten demo style into element style
Former-commit-id: 3b81592dc7e9c0c3cfdcfae02a7b659016d83d40

--- a/x-mnemonic-validate/x-mnemonic-validate.css
+++ b/x-mnemonic-validate/x-mnemonic-validate.css
@@ -31,6 +31,10 @@ x-mnemonic-validate x-target-index::before {
     font-size: 52px;
 }
 
+x-mnemonic-validate button {
+    margin: 4px;
+}
+
 x-mnemonic-validate button.correct {
     background-color: var(--success-color);
     border-color: var(--success-color);
