Refactor for XElement update
Former-commit-id: d9e9325a25fe221f95586da6dda8c26b79d501ba

--- a/x-wallet-backup-import/x-wallet-backup-import.css
+++ b/x-wallet-backup-import/x-wallet-backup-import.css
@@ -19,7 +19,9 @@ x-wallet-backup-import h1:before {
 }
 
 x-wallet-backup-import input {
-    display: none;
+    opacity: 0;
+    position: absolute;
+    top: -10000px;
 }
 
 x-wallet-backup-backdrop {
