--- a/x-mnemonic-input/x-mnemonic-input.css
+++ b/x-mnemonic-input/x-mnemonic-input.css
@@ -17,13 +17,13 @@ x-mnemonic-input > form {
     flex-wrap: wrap;
 }
 
-x-mnemonic-input x-word-input {
+x-mnemonic-input-field {
     flex: 1 0 20%;
     margin: 2px;
 }
 
 x-mnemonic-input input[type="text"] {
-    background-color: rgba(255, 2555, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.1);
     width: 100%;
     min-width: 4.5em;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
