Add word error state and fix autocorrect on mobile
Former-commit-id: b1256e29a36922b1aca81fd50bc5d0ecefc65265

--- a/x-mnemonic-input/x-mnemonic-input.css
+++ b/x-mnemonic-input/x-mnemonic-input.css
@@ -39,3 +39,7 @@ x-mnemonic-input input[type="text"]:focus {
 x-mnemonic-input input[type="text"].complete {
     border-bottom-color: var(--success-color);
 }
+
+x-mnemonic-input input[type="text"].invalid {
+    border-bottom-color: var(--error-color);
+}
