--- a/x-mnemonic-input/x-mnemonic-input.css
+++ b/x-mnemonic-input/x-mnemonic-input.css
@@ -10,11 +10,32 @@ x-mnemonic-input {
     text-align: center;
     font-size: 15px;
     line-height: 32px;
+    transform: translate3d(0, 0, 0);
+    will-change: transform;
+}
+
+x-mnemonic-input.shake {
+    animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
+    border-color: var(--error-color);
+}
+
+@keyframes shake {
+    10%, 90% { transform: translate3d(-1px, 0, 0); }
+    20%, 80% { transform: translate3d(2px, 0, 0); }
+    30%, 50%, 70% { transform: translate3d(-4px, 0, 0); }
+    40%, 60% { transform: translate3d(4px, 0, 0); }
 }
 
 x-mnemonic-input > form {
     display: flex;
     flex-wrap: wrap;
+    transition: transform 0.8s ease, opacity 0.5s ease;
+    will-change: transform, opacity;
+}
+
+x-mnemonic-input.recovered > form {
+    transform: scale(0);
+    opacity: 0;
 }
 
 x-mnemonic-input-field {
@@ -46,6 +67,18 @@ x-mnemonic-input input[type="text"].complete {
 
 x-mnemonic-input input[type="text"].invalid {
     border-bottom-color: var(--error-color);
+}
+
+x-mnemonic-input .x-mnemonic-input-success {
+    opacity: 0;
+    transform: scale(0.5);
+    transition: transform 0.8s ease, opacity 0.5s ease;
+    will-change: transform, opacity;
+}
+
+x-mnemonic-input.recovered .x-mnemonic-input-success {
+    opacity: 1;
+    transform: scale(1);
 }
 
 datalist {
