x-qr-scanner: improved style on mobile
Former-commit-id: 8a4556b079f3b404c7399941f81f552f23c9bd67

--- a/x-qr-scanner/x-qr-scanner.css
+++ b/x-qr-scanner/x-qr-scanner.css
@@ -69,3 +69,13 @@ x-qr-scanner > label:hover {
 x-qr-scanner > label > input[type="file"] {
     display: none;
 }
+
+@media (max-width: 550px) {
+    x-qr-scanner > label {
+        right: 24px;
+        bottom: 24px;
+        height: 64px !important;
+        width: 64px !important;
+        background-size: 32px;
+    }
+}
