--- a/x-qr-scanner/x-qr-scanner.css
+++ b/x-qr-scanner/x-qr-scanner.css
@@ -29,20 +29,18 @@ x-qr-scanner video {
 
 /* Overlay */
 
-x-qr-scanner:before {
-    content: '';
+x-qr-scanner [qr-overlay] {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    background-image: url('data:image/svg+xml,<svg width="2048" height="2048" xmlns="http://www.w3.org/2000/svg"><path fill-opacity=".5" d="M0 0h2048v2048H0V0zm1141.7 1027.5c1.2-2.2 1.2-5 0-7.2l-55.6-96.7c-1-2.2-3.3-3.6-6-3.6H969c-2.6 0-5 1.4-6.3 3.6l-55.5 96.7c-1.4 2.3-1.4 5 0 7.2l55.4 96.7c1.3 2.3 3.7 3.6 6.3 3.6h111c2.5 0 5-1.3 6.2-3.6l55.7-96.7z" fill-rule="evenodd"/></svg>');
-    background-position: center;
+    border-radius: 20px;
+    box-shadow: 0 0 0 50vmax rgba(0,0,0,0.7);
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="400" width="400"><path d="M0 0v400h400V0zm171.3 134.5h57.5a15.7 15.7 0 0 1 13.5 7.9l28.8 49.8a15.7 15.7 0 0 1 0 15.6l-28.8 49.8a15.7 15.7 0 0 1-13.6 7.9h-57.5a15.7 15.7 0 0 1-13.5-7.9l-28.8-49.8a15.7 15.7 0 0 1 0-15.6l28.8-49.8a15.7 15.7 0 0 1 13.6-7.9z" opacity=".5"/></svg>');
+    background-size: cover;
     animation: scaleDown 400ms infinite alternate ease-in-out;
-    z-index: 1;
 }
 
 @keyframes scaleDown {
     0% {
-        transform: scale(1.1);
+        transform: scale(0.9);
     }
 }
 
