--- a/x-wallet-backup-import/x-wallet-backup-import.css
+++ b/x-wallet-backup-import/x-wallet-backup-import.css
@@ -6,12 +6,26 @@ x-wallet-backup-import {
     flex-direction: column;
     align-items: center;
     border-radius: 12px;
+
+    color: white;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+}
+
+x-wallet-backup-import-icon {
     background: url('data:image/svg+xml,<svg fill="#fff" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"/></svg>');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 120px;
-    color: white;
-    cursor: pointer;
+    background-size: cover;
+    display: block;
+    height: 128px;
+    width: 128px;
+    transition: transform 300ms;
+}
+
+x-wallet-backup-import:hover x-wallet-backup-import-icon {
+    transform: scale(1.1);
 }
 
 x-wallet-backup-import h1:before {
