--- a/x-qr-scanner/x-qr-scanner.css
+++ b/x-qr-scanner/x-qr-scanner.css
@@ -30,9 +30,10 @@ x-qr-scanner video {
 
 x-qr-scanner [qr-overlay] {
     position: absolute;
-    border-color: rgba(0,0,0,0.7);
-    border-style: solid;
+    border-radius: 20px;
+    box-shadow: 0 0 0 50vmax rgba(0,0,0,0.7);
     overflow: hidden;
+    transform: translateZ(0); /* to avoid rendering issues on iPhone */
 }
 
 x-qr-scanner [qr-overlay]:after {
