Refactor x-slides and x-mnemonic-validate
Former-commit-id: c5558d7bb20c5c894869d4008c6feb5960dfef44

--- a/x-mnemonic-validate/x-mnemonic-validate.css
+++ b/x-mnemonic-validate/x-mnemonic-validate.css
@@ -57,7 +57,7 @@ x-mnemonic-validate button.shake {
     40%, 60% { transform: translate3d(4px, 0, 0); }
 }
 
-x-mnemonic-validate x-slide:last-child {
+x-mnemonic-validate-success-slide {
     display: flex;
     flex-direction: column;
     justify-content: center;
