--- a/x-slides/x-slides.css
+++ b/x-slides/x-slides.css
@@ -14,9 +14,7 @@ x-slide-container.animate {
     transition: transform 0.8s ease-in-out;
 }
 
-x-slide-container > * {     /* slides are the children of x-slide-container */ 
-    border: 1px solid white;
-    border-radius: 8px;
+x-slide-container > * {     /* slides are the children of x-slide-container */
     padding: 24px 16px;
     box-sizing: border-box;
     min-height: 320px;
@@ -28,6 +26,7 @@ x-slide-container > * {     /* slides are the children of x-slide-container */
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
     transform: scale(0.8);
     will-change: opacity, transform;
+    user-select: none;
 }
 
 x-slide-container > *.active {
