x-mnemonic-input, x-mnemonic-phrase: add animation
Former-commit-id: 71d32b9f74510bb2d43a4822c4b6f707ff4287fa

--- a/x-mnemonic-input/x-mnemonic-input.css
+++ b/x-mnemonic-input/x-mnemonic-input.css
@@ -133,3 +133,16 @@ datalist {
 .autocomplete-suggestion.selected {
     background: #f0f0f0;
 }
+
+/*Animation*/
+x-mnemonic-input-field {
+    animation: x-mnemonic-input-field 300ms;
+    animation-fill-mode: backwards;
+}
+
+@keyframes x-mnemonic-input-field {
+    0% {
+        opacity: 0;
+        transform: translate(-64px, -32px);
+    }
+}
