--- a/x-wallet-backup/x-wallet-backup.css
+++ b/x-wallet-backup/x-wallet-backup.css
@@ -7,4 +7,10 @@ x-wallet-backup{
 x-wallet-backup img {
 	height: 100%;
 	border-radius: 12px;
+	box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+	transition: transform 300ms;
+}
+
+x-wallet-backup:hover img{
+	transform:scale(1.02);
 }
