--- a/x-wallet-backup-import/x-wallet-backup-import.css
+++ b/x-wallet-backup-import/x-wallet-backup-import.css
@@ -1,12 +1,11 @@
 x-wallet-backup-import {
     display: flex;
     width: 320px;
-    height: 400px;
+    min-height: 400px;
     border: 1px solid white;
     flex-direction: column;
     align-items: center;
     border-radius: 12px;
-
     color: white;
     cursor: pointer;
     flex-direction: column;
@@ -28,10 +27,6 @@ x-wallet-backup-import:hover x-wallet-backup-import-icon {
     transform: scale(1.1);
 }
 
-x-wallet-backup-import h1:before {
-    content: 'Drop a File';
-}
-
 x-wallet-backup-import input {
     opacity: 0;
     position: absolute;
@@ -50,10 +45,7 @@ x-wallet-backup-backdrop {
     align-items: center;
     color: white;
     font-size: 24px;
-}
-
-x-wallet-backup-backdrop:before {
-    content: 'Drop wallet file to import';
+    z-index: 2;
 }
 
 [active] x-wallet-backup-backdrop {
