Generalize & remove XMnemonicValidateSuccessSlide
Former-commit-id: 2bbf45835b899e1cc3b85baafae9a45e7886729c

--- a/x-slides/x-slides.css
+++ b/x-slides/x-slides.css
@@ -56,3 +56,10 @@ x-indicator x-dot {
 x-indicator x-dot[on] {
     background: white;
 }
+
+x-slide {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
