x-pinpad: use classList; never className
Former-commit-id: e642f7d93a7e03a0f992515ae736caaef83f8767

--- a/x-pinpad/x-pinpad.css
+++ b/x-pinpad/x-pinpad.css
@@ -3,6 +3,7 @@ x-pinpad {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 x-pinpad-container {
