--- a/x-mnemonic-phrase/x-mnemonic-phrase.css
+++ b/x-mnemonic-phrase/x-mnemonic-phrase.css
@@ -2,7 +2,8 @@ x-mnemonic-phrase,
 .mnemonic-phrase {
     width: 90%;
     max-width: 350px;
-    padding: 8px;
+    padding: 16px 8px;
+    margin-top: 8px;
     box-sizing: border-box;
     border: 1px solid white;
     border-radius: 8px;
@@ -17,6 +18,7 @@ x-mnemonic-phrase,
     -moz-user-select: none;
     user-select: none;
     /* doesn't work on safari */
+    position:  relative;
 }
 
 textarea.mnemonic-phrase {
@@ -37,3 +39,26 @@ x-mnemonic-phrase>span {
         transform: translate(32px, 16px);
     }
 }
+
+x-mnemonic-phrase:before{
+    content: 'Passphrase';
+    display: block;
+    position: absolute;
+    left: 50%;
+    width: 104px;
+    box-sizing: border-box;
+    border-radius: 24px;
+    top: -13px;
+    font-size: 12px;
+    line-height: 26px;
+    margin-left: -52px;
+    background: url('data:image/svg+xml,<svg fill="#fff" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"/></svg>');
+    background-size: 14px;
+    background-position: 9px center;
+    background-repeat: no-repeat;
+    background-color:  black;
+    padding-left: 16px;
+}
+
+
+
