--- a/x-privacy-agent/x-privacy-agent.css
+++ b/x-privacy-agent/x-privacy-agent.css
@@ -6,13 +6,19 @@ x-privacy-agent {
 }
 
 x-privacy-agent h1 {
-    color: red;
+    color: var(--warning-color);
     padding: 16px 0;
-    /* font-weight: 500; */
+    font-weight: 500;
+    font-size: 24px;
 }
 
 x-privacy-agent p {
     max-width: 400px;
+    font-size: 15px;
+}
+
+x-privacy-agent svg{
+	opacity: 0.8;
 }
 
 x-privacy-agent-container {
@@ -24,7 +30,7 @@ x-privacy-agent-container {
     background: white;
     padding: 24px 16px;
     display: flex;
-    color: black;
+    color: rgba(0,0,0,0.98);
     border-radius: 12px;
     text-align: center;
     margin-bottom: 16px;
