--- a/theme/theme.css
+++ b/theme/theme.css
@@ -3,6 +3,7 @@
     --primary-background: linear-gradient(#536DFE, #a553fe);
     --success-color: #64FFDA; /* teal-a200 */
     --error-color: #FF8A80; /* red-a100 */
+    --warning-color: red; 
     --secondary-text-color: rgba(0, 0, 0, 0.7);
     --secondary-cta-color: rgba(255, 255, 255, 0.7);
 }
