Minor style polishing, cleanup
Former-commit-id: 90022e7b753862a5244f9245b2a98c5f80a693e3

--- a/x-mnemonic-input/x-mnemonic-input.css
+++ b/x-mnemonic-input/x-mnemonic-input.css
@@ -165,7 +165,7 @@ datalist {
 
 /*Animation*/
 
-x-mnemonic-input-field {
+.entry x-mnemonic-input-field{
     animation: x-mnemonic-input-field 300ms;
     animation-fill-mode: backwards;
 }
