--- a/typography/typography.css
+++ b/typography/typography.css
@@ -1,3 +1,7 @@
+body{
+    font-size: 15px;
+}
+
 h1,
 .h1 {
     font-size: 28px;
@@ -10,10 +14,11 @@ h1,
 }
 
 h1+h2 {
-    font-size: 14px;
+    font-size: 15px;
     padding-bottom: 24px;
-    font-weight: 500;
+    font-weight: 400;
     text-align: center;
+    margin-top: 4px;
 }
 
 h2,
@@ -45,11 +50,14 @@ p a {
 
 
 a[secondary] {
-    margin-bottom: 48px;
     font-size: 15px;
     font-weight: 800;
 }
 
-[button] {
-    /* margin-top: 80px; */
+a[secondary] + [button]{
+    margin-top: 40px;
+}
+
+li{
+    line-height: 24px;
 }
