--- a/x-privacy-agent/x-privacy-agent.css
+++ b/x-privacy-agent/x-privacy-agent.css
@@ -21,6 +21,10 @@ x-privacy-agent svg{
 	opacity: 0.8;
 }
 
+x-privacy-agent button{
+    margin-top: 0;
+}
+
 x-privacy-agent-container {
     flex-direction: column;
     align-items: center;
